# citicup-plus/src/main/java/com/example/demo/model/Market.java
@@ -1,0 +1,109 @@
+package com.example.demo.model;
+
+import javax.persistence.Entity;
+import javax.persistence.Table;
+
+//日线行情
+@Entity
+@Table(name = "market")
+public class Market extends BaseEntity {
+    private String tsCode;
+    private String tradeDate;
+    private double open;
+    private double amount;
+    private double change;
+    private double pctChg;
+    private double close;
+    private double high;
+    private double low;
+    private double preClose;
+    private double vol;
+
+    public String getTsCode() {
+        return tsCode;
+    }
+
+    public void setTsCode(String tsCode) {
+        this.tsCode = tsCode;
+    }
+
+    public String getTradeDate() {
+        return tradeDate;
+    }
+
+    public void setTradeDate(String tradeDate) {
+        this.tradeDate = tradeDate;
+    }
+
+    public double getOpen() {
+        return open;
+    }
+
+    public void setOpen(double open) {
+        this.open = open;
+    }
+
+    public double getAmount() {
+        return amount;
+    }
+
+    public void setAmount(double amount) {
+        this.amount = amount;
+    }
+
+    public double getChange() {
+        return change;
+    }
+
+    public void setChange(double change) {
+        this.change = change;
+    }
+
+    public double getPctChg() {
+        return pctChg;
+    }
+
+    public void setPctChg(double pctChg) {
+        this.pctChg = pctChg;
+    }
+
+    public double getClose() {
+        return close;
+    }
+
+    public void setClose(double close) {
+        this.close = close;
+    }
+
+    public double getHigh() {
+        return high;
+    }
+
+    public void setHigh(double high) {
+        this.high = high;
+    }
+
+    public double getLow() {
+        return low;
+    }
+
+    public void setLow(double low) {
+        this.low = low;
+    }
+
+    public double getPreClose() {
+        return preClose;
+    }
+
+    public void setPreClose(double preClose) {
+        this.preClose = preClose;
+    }
+
+    public double getVol() {
+        return vol;
+    }
+
+    public void setVol(double vol) {
+        this.vol = vol;
+    }
+}
